--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  /*Only use this if we want full height pages*/
+  /*html,*/
+  /*body,*/
+  /*#___gatsby,*/
+  /*#gatsby-focus-wrapper {*/
+  /*  height: 100%;*/
+  /*}*/
+}
